{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 84,
  "lineage": "26e778f7-98e1-204b-a6ff-022f0bc96085",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:security-group/sg-05fee85782a412b63",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05fee85782a412b63",
            "ingress": [],
            "name": "default",
            "owner_id": "${ACCOUNT_NUM}",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-security-group",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-security-group",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "vpc_id": "vpc-0f722029a81df49eb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ade4c3ef123d79e6",
            "association_id": "eipassoc-0a3b034cce088b8dd",
            "domain": "vpc",
            "id": "eipalloc-0ade4c3ef123d79e6",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0ecd8f35786113f37",
            "private_dns": "ip-10-0-20-235.us-west-1.compute.internal",
            "private_ip": "10.0.20.235",
            "public_dns": "ec2-54-151-125-92.us-west-1.compute.amazonaws.com",
            "public_ip": "54.151.125.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "vpc": true
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:internet-gateway/igw-0dc6580915679b6a5",
            "id": "igw-0dc6580915679b6a5",
            "owner_id": "${ACCOUNT_NUM}",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "vpc_id": "vpc-0f722029a81df49eb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ade4c3ef123d79e6",
            "connectivity_type": "public",
            "id": "nat-06644e7d167018f4f",
            "network_interface_id": "eni-0ecd8f35786113f37",
            "private_ip": "10.0.20.235",
            "public_ip": "54.151.125.92",
            "subnet_id": "subnet-0a98f11efbc8308ee",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c48c59bbe2e5de921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06644e7d167018f4f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c48c59bbe2e5de92",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dc6580915679b6a5",
            "id": "r-rtb-092946039c00ce2ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-092946039c00ce2ee",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:route-table/rtb-0c48c59bbe2e5de92",
            "id": "rtb-0c48c59bbe2e5de92",
            "owner_id": "${ACCOUNT_NUM}",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06644e7d167018f4f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-private",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-private",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f722029a81df49eb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:route-table/rtb-092946039c00ce2ee",
            "id": "rtb-092946039c00ce2ee",
            "owner_id": "${ACCOUNT_NUM}",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dc6580915679b6a5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-public",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-public",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f722029a81df49eb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a69f6df6c1a00f66",
            "route_table_id": "rtb-0c48c59bbe2e5de92",
            "subnet_id": "subnet-05e0dc2babcc1d057"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0519f3ae1fec5136d",
            "route_table_id": "rtb-0c48c59bbe2e5de92",
            "subnet_id": "subnet-076a7f45f90343f7c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa7de5d7ea82596f",
            "route_table_id": "rtb-0c48c59bbe2e5de92",
            "subnet_id": "subnet-036ca46c3f1c6cd36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04492e64e6de539ca",
            "route_table_id": "rtb-0c48c59bbe2e5de92",
            "subnet_id": "subnet-04f691d130d0a48d8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e74aa14235b2d20",
            "route_table_id": "rtb-0c48c59bbe2e5de92",
            "subnet_id": "subnet-0d3be85c800e362e5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0046a766835cd1bc8",
            "route_table_id": "rtb-0c48c59bbe2e5de92",
            "subnet_id": "subnet-0a2418b15146531bf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0a2b34e2bf48078",
            "route_table_id": "rtb-092946039c00ce2ee",
            "subnet_id": "subnet-0a98f11efbc8308ee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0499d5dc1b5c022de",
            "route_table_id": "rtb-092946039c00ce2ee",
            "subnet_id": "subnet-02645f9675f6bd677"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6a30b9f73260c51",
            "route_table_id": "rtb-092946039c00ce2ee",
            "subnet_id": "subnet-019851e71023f701d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:subnet/subnet-05e0dc2babcc1d057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e0dc2babcc1d057",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "${ACCOUNT_NUM}",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-db-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-db-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "vpc_id": "vpc-0f722029a81df49eb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:subnet/subnet-076a7f45f90343f7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076a7f45f90343f7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "${ACCOUNT_NUM}",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-db-us-west-1b",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-db-us-west-1b",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "vpc_id": "vpc-0f722029a81df49eb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:subnet/subnet-036ca46c3f1c6cd36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036ca46c3f1c6cd36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "${ACCOUNT_NUM}",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-db-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-db-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "vpc_id": "vpc-0f722029a81df49eb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:subnet/subnet-04f691d130d0a48d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f691d130d0a48d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "${ACCOUNT_NUM}",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-private-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-private-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f722029a81df49eb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:subnet/subnet-0d3be85c800e362e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3be85c800e362e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "${ACCOUNT_NUM}",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-private-us-west-1b",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-private-us-west-1b",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f722029a81df49eb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:subnet/subnet-0a2418b15146531bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2418b15146531bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "${ACCOUNT_NUM}",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-private-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-private-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f722029a81df49eb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:subnet/subnet-0a98f11efbc8308ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a98f11efbc8308ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "${ACCOUNT_NUM}",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-public-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-public-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f722029a81df49eb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:subnet/subnet-02645f9675f6bd677",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02645f9675f6bd677",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "${ACCOUNT_NUM}",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-public-us-west-1b",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-public-us-west-1b",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f722029a81df49eb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:subnet/subnet-019851e71023f701d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019851e71023f701d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "${ACCOUNT_NUM}",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless-public-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless-public-us-west-1a",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f722029a81df49eb"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:${ACCOUNT_NUM}:vpc/vpc-0f722029a81df49eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06caac1465f51dc9f",
            "default_route_table_id": "rtb-074e343ac495e6256",
            "default_security_group_id": "sg-05fee85782a412b63",
            "dhcp_options_id": "dopt-084b420f0589a444c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f722029a81df49eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-074e343ac495e6256",
            "owner_id": "${ACCOUNT_NUM}",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-serverless",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-serverless",
              "Owner": "Dylan Luttrell",
              "kubernetes.io/cluster/vpc-serverless": "shared"
            }
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "tags"
              },
              {
                "type": "index",
                "value": {
                  "value": "Environment",
                  "type": "string"
                }
              }
            ]
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}